--- a/views/signIn.html
+++ b/views/signIn.html
@@ -23,18 +23,22 @@
     <div class="mx-auto mt-5 p-5 grey w-50 w-sm-100">
         <h1>Sign In!</h1>
         <hr>
-        <form action="#" method="post">
+        <form action="#" method="post" id="signIn">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" name="username" id="username" aria-describedby="username" placeholder="Enter Username">
+                <span class="d-none text-danger" id="errUsername">Please enter Username</span>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                <span class="d-none text-danger" id="errPassword">Please enter Password</span>
             </div>
-            <span class="text-danger"><check if="{{ isset(@errors['user']) }}">
+            <span class="text-danger">
+                <check if="{{ isset(@errors['user']) }}">
                             {{ @errors['user'] }}
-                        </check></span>
+                </check>
+            </span>
             <br>
             <a href="signUp" class="btn blue">Sign Up</a>
             <button type="submit" class="btn blue">Sign In!</button>
@@ -54,6 +58,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+<script src="scripts/validation.js"></script>
 </body>
 </html>
