--- a/views/signUpPro.html
+++ b/views/signUpPro.html
@@ -23,10 +23,11 @@
     <div class="mx-auto mt-5 p-5 grey w-50 w-sm-100">
         <h1>Sign Up ProUser!</h1>
         <hr>
-        <form action="#" method="post">
+        <form action="#" method="post" id="pro">
             <div class="form-group">
                 <label for="subject">What is your favorite subject?</label>
                 <input type="text" class="form-control" name="subject" id="subject" aria-describedby="subject" placeholder="Enter Subject" value="">
+                <span class="d-none text-danger" id="errSubject">Please enter a Subject (math, english, science, history, business, social studies, psychology, economics, art, theater, music, language arts, home economics)</span>
             </div>
             <span class="text-danger"><check if="{{ isset(@errors['subject']) }}">
                             {{ @errors['subject'] }}
@@ -47,6 +48,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+<script src="scripts/validationSubject.js"></script>
 </body>
 </html>
