--- a/views/account.html
+++ b/views/account.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <!--
  * Blezyl Santos and Sarah Mehri
  * Kids Learn Website
@@ -7,6 +6,8 @@
  * what they created, what they saved as image
  *
 -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
