--- a/views/navbar.html
+++ b/views/navbar.html
@@ -5,7 +5,7 @@
         <!-- Menu Bar -->
         <button class="navbar-toggler navbar-dark" type="button"
                 data-toggle="collapse" data-target="#myTogglerNav"
-                aria-controls="myTogglerNav"
+                aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
