--- a/views/signUp.html
+++ b/views/signUp.html
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label for="fname">First Name</label>
-                <input type="text" class="form-control" name="fname" id="fname" aria-describedby="name" placeholder="Enter First Name" value="{{ @fname }}">
+                <input type="text" class="form-control" name="fname" id="fname" aria-describedby="fname" placeholder="Enter First Name" value="{{ @fname }}">
                 <span class="d-none text-danger" id="errFirst">First Name cannot be blank and must contain only characters</span>
                 <span class="text-danger"><check if="{{ isset(@errors['fname']) }}">
                             {{ @errors['fname'] }}
@@ -42,7 +42,7 @@
             </div>
             <div class="form-group">
                 <label for="lname">Last Name</label>
-                <input type="text" class="form-control" name="lname" id="lname" aria-describedby="name" placeholder="Enter Last Name" value="{{ @lname }}">
+                <input type="text" class="form-control" name="lname" id="lname" aria-describedby="lname" placeholder="Enter Last Name" value="{{ @lname }}">
                 <span class="d-none text-danger" id="errLast">Last Name cannot be blank and must contain only characters</span>
                 <span class="text-danger"><check if="{{ isset(@errors['lname']) }}">
                             {{ @errors['lname'] }}
